# WareMaster

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  STACK.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsr.config.json  vite.config.ts
.github/workflows/: release.yml
.scripts/: validate_yaml.py
docs/: README.md  SOURCE.md
docs/data/: armor.yaml  beastiary.yaml  classes.yaml  general-goods.yaml  ryude-equipment.yaml  ryude-units.yaml  skills.yaml  tables.yaml  weapons.yaml
docs/rules/: 01-introduction.md  02-world-of-ahan.md  03-character-creation.md  04-attributes-and-derived.md  05-skills.md  06-equipment.md  07-action-rolls.md  08-combat.md  09-damage-and-healing.md  10-advancement.md  11-word-casting.md  12-numetic-arts.md  13-invocations.md  14-ryude.md  15-units-and-glossary.md
scripts/: bake-portraits.mjs  build-icon.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  portraits.rs  reference.rs  vault.rs
src/components/: ConfirmDialog.tsx
src/domain/: action-log.ts  attributes.ts  campaign.ts  character.ts  class.ts  custom-item.ts  ids.ts  item.ts  monster-instance.ts  monster.ts  npc-instance.ts  npc.ts  ryude-instance.ts  ryude.ts  skill.ts  tables.ts  technique.ts
src/engine/: skill-check.test.ts  skill-check.ts
src/hooks/: usePortrait.ts  useReferenceData.ts  useUpdater.ts
src/lib/: dice-notation.test.ts  dice-notation.ts  (+2 more)
(+185 files in other folders)
