[package]
name = "waremaster"
version = "0.5.0-alpha.2"
description = "WareMaster — Wares Blade TTRPG companion"
authors = ["WareMaster contributors"]
license = "MIT"
repository = "https://github.com/TheRussellMuscle/WareMaster"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "waremaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
